--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello world
+<h2>Free Cheese</h2>
+<form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
+  <input type="text" name="userId" value=""/>
+  <input type="submit"/>
+</form>
